test_regress/t/t_func_bad2.out
%Error-UNSUPPORTED: t/t_func_bad2.v:8:13: Unsupported: Recursive function or task call
                                        : ... In instance t
    8 |    function recurse;
      |             ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=4.201
%Error: Exiting due to
